fixed the about me not showing

--- a/HTML-and-CSS-Workshop/HTML and CSS Workshop/style.css
+++ b/HTML-and-CSS-Workshop/HTML and CSS Workshop/style.css
@@ -132,10 +132,6 @@ html {
     color: #ED0049;
   }
   
-  .about-section h2 {
-    display: none;
-  }
-  
   .skills {
     padding: 32px 42px;
     margin-bottom: 32px;
